// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`banner > renders correctly with a button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1v0mpnn0 styles_size_medium__1v0mpnn1 styles_variant_intro__1v0mpnn3 styles_undefined_compound_1__1v0mpnn6 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
    >
      <div
        class="styles_medium__1v0mpnn9 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_center_xxsmall__mxir9361"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/other/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j styles_justifyContent_center_xxsmall__mxir9361"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_headingSmall__1yhcak815 style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          >
            Title
          </p>
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Description
          </p>
        </div>
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
        >
          <button
            class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_medium__1x0t66mf styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
            type="button"
          >
            Button
          </button>
        </div>
      </div>
      <button
        class="styles__1v0mpnnb styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
        name="close"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > renders correctly with a link 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1v0mpnn0 styles_size_medium__1v0mpnn1 styles_variant_intro__1v0mpnn3 styles_undefined_compound_1__1v0mpnn6 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
    >
      <div
        class="styles_medium__1v0mpnn9 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_center_xxsmall__mxir9361"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/other/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j styles_justifyContent_center_xxsmall__mxir9361"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_headingSmall__1yhcak815 style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          >
            Title
          </p>
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Description
          </p>
        </div>
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
        >
          <a
            class="styles__o0z6wk0 styles_prominence_default__o0z6wk3 styles_sentiment_primary__o0z6wk1 styles_oneLine_false__o0z6wk8 styles_variant_bodySmallStrong__o0z6wka styles_type_standalone__o0z6wkd styles_undefined_compound_0__o0z6wke styles__o0z6wkn"
            data-variant="standalone"
            href=""
            rel="noopener noreferrer"
            target="_blank"
          >
            Link
            <span
              class="styles__o0z6wkm"
            >
              <svg
                class="styles__o0z6wkp uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  OpenInNewIcon
                </title>
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <button
        class="styles__1v0mpnnb styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
        name="close"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > renders correctly with closable to false 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1v0mpnn0 styles_size_medium__1v0mpnn1 styles_variant_intro__1v0mpnn3 styles_undefined_compound_1__1v0mpnn6 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
    >
      <div
        class="styles_medium__1v0mpnn9 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_center_xxsmall__mxir9361"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/other/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j styles_justifyContent_center_xxsmall__mxir9361"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_headingSmall__1yhcak815 style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          >
            Title
          </p>
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Description
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1v0mpnn0 styles_size_medium__1v0mpnn1 styles_variant_intro__1v0mpnn3 styles_undefined_compound_1__1v0mpnn6 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
    >
      <div
        class="styles_medium__1v0mpnn9 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_center_xxsmall__mxir9361"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/other/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j styles_justifyContent_center_xxsmall__mxir9361"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_headingSmall__1yhcak815 style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          >
            Title
          </p>
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="styles__1v0mpnnb styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
        name="close"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > renders correctly with direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1v0mpnn0 styles_size_medium__1v0mpnn1 styles_variant_intro__1v0mpnn3 styles_undefined_compound_1__1v0mpnn6 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
    >
      <div
        class="styles_medium__1v0mpnn9 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_center_xxsmall__mxir9361"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/other/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j styles_justifyContent_center_xxsmall__mxir9361"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_headingSmall__1yhcak815 style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          >
            Title
          </p>
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="styles__1v0mpnnb styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
        name="close"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > should render correctly with dark theme 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1v0mpnn0 styles_size_medium__1v0mpnn1 styles_variant_intro__1v0mpnn3 styles_undefined_compound_1__1v0mpnn6 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
    >
      <div
        class="styles_medium__1v0mpnn9 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_center_xxsmall__mxir9361"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/other/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j styles_justifyContent_center_xxsmall__mxir9361"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_headingSmall__1yhcak815 style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          >
            Title
          </p>
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_white__1yhcak8g style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_72__1yhcak83a"
          >
            Descritpion
          </p>
        </div>
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v"
        >
          <a
            class="styles__o0z6wk0 styles_prominence_stronger__o0z6wk5 styles_sentiment_primary__o0z6wk1 styles_oneLine_false__o0z6wk8 styles_variant_bodySmallStrong__o0z6wka styles_type_standalone__o0z6wkd styles_undefined_compound_2__o0z6wkg styles__o0z6wkn"
            data-variant="standalone"
            href=""
            rel="noopener noreferrer"
            target="_blank"
          >
            Learn more
            <span
              class="styles__o0z6wkm"
            >
              <svg
                class="styles__o0z6wkp uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  OpenInNewIcon
                </title>
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <button
        class="styles__1v0mpnnb styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
        name="close"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > sizes and variants > renders correctly with size medium and variant intro 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1v0mpnn0 styles_size_medium__1v0mpnn1 styles_variant_intro__1v0mpnn3 styles_undefined_compound_1__1v0mpnn6 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
    >
      <div
        class="styles_medium__1v0mpnn9 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_center_xxsmall__mxir9361"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/other/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j styles_justifyContent_center_xxsmall__mxir9361"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_headingSmall__1yhcak815 style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          >
            Title
          </p>
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="styles__1v0mpnnb styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
        name="close"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > sizes and variants > renders correctly with size medium and variant promotional 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1v0mpnn0 styles_size_medium__1v0mpnn1 styles_variant_promotional__1v0mpnn4 styles_undefined_compound_3__1v0mpnn8 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
    >
      <div
        class="styles_medium__1v0mpnn9 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_center_xxsmall__mxir9361"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/other/Banner/assets/default-image.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j styles_justifyContent_center_xxsmall__mxir9361"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1yhcak80 style_prominence_strong__1yhcak85 style_sentiment_white__1yhcak8g style_variant_headingSmall__1yhcak815 style_undefined_compound_1__1yhcak81b style_undefined_compound_73__1yhcak83b"
          >
            Title
          </p>
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_white__1yhcak8g style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_72__1yhcak83a"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="styles__1v0mpnnb styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_small__1x0t66mg styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
        name="close"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > sizes and variants > renders correctly with size small and variant intro 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1v0mpnn0 styles_size_small__1v0mpnn2 styles_variant_intro__1v0mpnn3 styles_undefined_compound_0__1v0mpnn5 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
    >
      <div
        class="styles_small__1v0mpnna styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_center_xxsmall__mxir9361"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/other/Banner/assets/default-image-small.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j styles_justifyContent_center_xxsmall__mxir9361"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_primary__1yhcak8c style_variant_bodyStronger__1yhcak8o style_undefined_compound_0__1yhcak81a style_undefined_compound_40__1yhcak82e"
          >
            Title
          </p>
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="styles__1v0mpnnb styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
        name="close"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`banner > sizes and variants > renders correctly with size small and variant promotional 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1v0mpnn0 styles_size_small__1v0mpnn2 styles_variant_promotional__1v0mpnn4 styles_undefined_compound_2__1v0mpnn7 styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
    >
      <div
        class="styles_small__1v0mpnna styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_justifyContent_center_xxsmall__mxir9361"
      >
        <img
          alt=""
          height="auto"
          src="/src/components/other/Banner/assets/default-image-small.svg"
          width="auto"
        />
      </div>
      <div
        class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_column_xxsmall__mxir932d styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_space-between_xxsmall__mxir9377"
        style="flex: 1 1 0%;"
      >
        <div
          class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j styles_justifyContent_center_xxsmall__mxir9361"
          style="flex: 1 1 0%;"
        >
          <p
            class="style__1yhcak80 style_prominence_strong__1yhcak85 style_sentiment_white__1yhcak8g style_variant_bodyStronger__1yhcak8o style_undefined_compound_1__1yhcak81b style_undefined_compound_73__1yhcak83b"
          >
            Title
          </p>
          <p
            class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_white__1yhcak8g style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_72__1yhcak83a"
          >
            Description
          </p>
        </div>
      </div>
      <button
        class="styles__1v0mpnnb styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_small__1x0t66mg styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
        name="close"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
